
2000-02-21 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new functions : NAND,NOR
-Now you can "Underline"

2000-02-22 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-02-24 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new functions upper and lower
-Now "hide table" and "hide grid" are saving
-Improved "kspread_dlg_show" 
-Add shortcut
 
2000-02-26 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new function "find"
-bug fix

2000-03-03 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new dialog box "Linear Series" =>now you can create linear series
-Improved kspread_dlg_conditional =>now there is a preview
But I can't change color because there isn't "setColor" for a QLineEdit 
bug ? perhaps in QT2.2
Now I use knumvalidator for QLineEdit
-Bug fix . Fix bug that Michael Koch reported me in kspread_dlg_formula
  centered border on cell grid ..
-Bug fix in KSpread_dlg_conditional.

2000-03-04 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Improved ReadWrite => when you load in konqueror a kspread file
you can't resize column or row, you can't rename table etc...

2000-03-10 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-03-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add financial functions that Jonathan Singer created.
thanks

2000-03-24 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix
-Now check spelling works => correct kspell.cpp 
replace void slotModalDone( const char * ) by void slotModalDone( const QString & )
-David also ,bug fix 
thanks.
 