@@ -363,4 +363,14 @@ thanks
 replace void slotModalDone( const char * ) by void slotModalDone( const QString & )
 -David also ,bug fix 
 thanks.
- 
+
+2000-04-01 -Montel laurent <montell@club-internet.fr>
+-----------------------------------------------------
+-Add geometrical series
+
+-Now Torben is back. So I corrected bug in kscript. Now Int value
+can be transforme in Double Value => Create_formula works fine.
+-He works on bugs thanks.
+
+-David Faure works too on bugs, thanks.
+So I think that kspread should be the best spread on linux :).
